@@ -9,195 +9,180 @@ import java.util.ArrayList;
 import java.util.List;
 import fr.samlegamer.utils.JsonsUtils;
 
-public class McwAPI
-{
-	public static final String READER = System.getProperty("user.dir")+File.separator+"mcwmods"+File.separator;
+public class McwAPI {
+	public static final String READER = System.getProperty("user.dir") + File.separator + "mcwmods" + File.separator;
 	public static final String READER_MCW_LANG = System.getProperty("user.dir") + File.separator + "languages" + File.separator;
 	public static final String READER_MODLIST = System.getProperty("user.dir") + File.separator + "modslist" + File.separator;
-	public static final String READER_MCW_TAGS = System.getProperty("user.dir") + File.separator + "tags" + File.separator;
 
-	public enum ClassicFolderTypes
-	{
-		TAGS_BLOCK_MINEABLE("data"+File.separator+"tags"+File.separator+"block"+File.separator+"mineable"+File.separator),
-		TAGS_BLOCK("data"+File.separator+"tags"+File.separator+"blocks"+File.separator),
-		TAGS_ITEM("data"+File.separator+"tags"+File.separator+"items"+File.separator),
-		RECIPE("data"+File.separator+"recipes"+File.separator), 
-		ADVANCEMENT_RECIPE("data"+File.separator+"advancements"+File.separator+"recipes"+File.separator), 
-		LOOT_TABLES("data"+File.separator+"loot_tables"+File.separator+"blocks"+File.separator),
-		BLOCKSTATES("blockstates"+File.separator),
-		LANG("lang"+File.separator),
-		MODELS("models"+File.separator),
-		MODEL_BLOCK("models"+File.separator+"block"+File.separator),
-		MODEL_ITEM("models"+File.separator+"item"+File.separator),
-		ITEMS("items"+File.separator);
-		
+	public enum ClassicFolderTypes {
+		TAGS_BLOCK_MINEABLE("data" + File.separator + "tags" + File.separator + "block" + File.separator + "mineable" + File.separator),
+		TAGS_BLOCK("data" + File.separator + "tags" + File.separator + "blocks" + File.separator),
+		TAGS_ITEM("data" + File.separator + "tags" + File.separator + "items" + File.separator),
+		RECIPE("data" + File.separator + "recipes" + File.separator),
+		ADVANCEMENT_RECIPE("data" + File.separator + "advancements" + File.separator + "recipes" + File.separator),
+		LOOT_TABLES("data" + File.separator + "loot_tables" + File.separator + "blocks" + File.separator),
+		BLOCKSTATES("blockstates" + File.separator),
+		LANG("lang" + File.separator),
+		MODELS("models" + File.separator),
+		MODEL_BLOCK("models" + File.separator + "block" + File.separator),
+		MODEL_ITEM("models" + File.separator + "item" + File.separator),
+		ITEMS("items" + File.separator);
+
 		private final String path;
-		private ClassicFolderTypes(String path)
-		{
+
+		private ClassicFolderTypes(String path) {
 			this.path = path;
 		}
-		
+
 		public String getPath() {
 			return path;
 		}
 	}
-	
-	private static List<String> mcw_fences_block_model_wood()
-	{
+
+	private static List<String> mcw_fences_block_model_wood() {
 		List<String> result = new ArrayList<String>();
-		result.add("highley_gate"+File.separator);
-		result.add("horse"+File.separator);
-		result.add("inventory"+File.separator);
-		result.add("picket"+File.separator);
-		result.add("stockade"+File.separator);
-		result.add("wired"+File.separator);
-		result.add("pyramid_gate"+File.separator);
-		result.add("hedges"+File.separator);
-		result.add("double_gate"+File.separator);
-		return result;
-	}
-	
-	private static List<String> mcw_fences_block_model_stone()
-	{
-		List<String> result = new ArrayList<String>();
-		result.add("grass_topped"+File.separator);
-		result.add("modern_wall"+File.separator);
-		result.add("inventory"+File.separator);
-		result.add("pillar"+File.separator);
-		result.add("railing_gate"+File.separator);
-		result.add("railing_wall"+File.separator);
+		result.add("highley_gate" + File.separator);
+		result.add("horse" + File.separator);
+		result.add("inventory" + File.separator);
+		result.add("picket" + File.separator);
+		result.add("stockade" + File.separator);
+		result.add("wired" + File.separator);
+		result.add("pyramid_gate" + File.separator);
+		result.add("hedges" + File.separator);
+		result.add("double_gate" + File.separator);
 		return result;
 	}
 
-	
-	private static List<String> mcw_bridges_block_model_wood()
-	{
+	private static List<String> mcw_fences_block_model_stone() {
 		List<String> result = new ArrayList<String>();
-		result.add("bridge"+File.separator+"bridge_wood"+File.separator);
-		result.add("bridge"+File.separator+"rail"+File.separator);
-		result.add("bridge"+File.separator+"rope"+File.separator);
-		result.add("stair"+File.separator+"wood"+File.separator);
-		result.add("stair"+File.separator+"rope"+File.separator);
-		result.add("support_pier"+File.separator);
-		return result;
-	}
-	
-	private static List<String> mcw_bridges_block_model_stone()
-	{
-		List<String> result = new ArrayList<String>();
-		result.add("bridge"+File.separator+"bridge_stone"+File.separator);
-		result.add("stair"+File.separator+"stone"+File.separator);
-		result.add("support_pier"+File.separator);
-		result.add("bridge"+File.separator+"balustrade"+File.separator);//Added
-		return result;
-	}
-	
-	private static List<String> mcw_roofs_block_modelwood()
-	{
-		List<String> result = new ArrayList<String>();
-		result.add("attic"+File.separator);
-		result.add("lower"+File.separator);
-		result.add("middle_end"+File.separator);
-		result.add("roof"+File.separator);
-		result.add("steep"+File.separator);
-		result.add("top"+File.separator);
+		result.add("grass_topped" + File.separator);
+		result.add("modern_wall" + File.separator);
+		result.add("inventory" + File.separator);
+		result.add("pillar" + File.separator);
+		result.add("railing_gate" + File.separator);
+		result.add("railing_wall" + File.separator);
 		return result;
 	}
 
-	private static List<String> mcw_furnitures_block_model()
-	{
+
+	private static List<String> mcw_bridges_block_model_wood() {
 		List<String> result = new ArrayList<String>();
-		result.add("cabinet"+File.separator);
-		result.add("chair"+File.separator);
-		result.add("counter"+File.separator);
-		result.add("desk"+File.separator);
-		result.add("drawer"+File.separator);
-		result.add("table"+File.separator);
-		result.add("wardrobe"+File.separator);
-		return result;
-	}
-	
-	private static List<String> mcw_trapdoors_block_model()
-	{
-		List<String> result = new ArrayList<String>();
-		result.add("bamboo"+File.separator);
-		result.add("barn"+File.separator);
-		result.add("barred"+File.separator);
-		result.add("barrel"+File.separator);
-		result.add("beach"+File.separator);
-		result.add("blossom"+File.separator);
-		result.add("classic"+File.separator);
-		result.add("cottage"+File.separator);
-		result.add("four_panel"+File.separator);
-		result.add("glass"+File.separator);
-		result.add("mystic"+File.separator);
-		result.add("paper"+File.separator);
-		result.add("ranch"+File.separator);
-		result.add("rp_bark"+File.separator);
-		result.add("swamp"+File.separator);
-		result.add("tropical"+File.separator);
-		result.add("whispering"+File.separator);
-		return result;
-	}
-	
-	private static List<String> mcw_paths_block_model()
-	{
-		List<String> result = new ArrayList<String>();
-		result.add("wooden"+File.separator);
-		return result;
-	}
-	
-	private static List<String> mcw_doors_block_model()
-	{
-		List<String> result = new ArrayList<String>();
-		result.add("bamboo"+File.separator);
-		result.add("bark"+File.separator);
-		result.add("barn"+File.separator);
-		result.add("beach"+File.separator);
-		result.add("classic"+File.separator);
-		result.add("cottage"+File.separator);
-		result.add("four_panel"+File.separator);
-		result.add("glass"+File.separator);
-		result.add("japanese"+File.separator);
-		result.add("modern"+File.separator);
-		result.add("mystic"+File.separator);
-		result.add("nether"+File.separator);
-		result.add("paper"+File.separator);
-		result.add("stable"+File.separator);
-		result.add("stable_head"+File.separator);
-		result.add("swamp"+File.separator);
-		result.add("tropical"+File.separator);
-		result.add("waffle"+File.separator);
-		result.add("western"+File.separator);
-		result.add("whispering"+File.separator);
-		return result;
-	}
-	
-	private static List<String> mcw_windows_block_model()
-	{
-		List<String> result = new ArrayList<String>();
-		result.add("blinds"+File.separator);
-		result.add("curtain_rod"+File.separator);
-		result.add("parapet"+File.separator);
-		result.add("resizeable"+File.separator);
-		result.add("shutter"+File.separator);
-		result.add("window"+File.separator);
-		result.add("window_barred"+File.separator);
-		return result;
-	}
-	
-	private static List<String> mcw_stairs_block_model()
-	{
-		List<String> result = new ArrayList<String>();
-		result.add("balcony"+File.separator);
-		result.add("platform"+File.separator);
-		result.add("railing"+File.separator);
-		result.add("stairs"+File.separator);
+		result.add("bridge" + File.separator + "bridge_wood" + File.separator);
+		result.add("bridge" + File.separator + "rail" + File.separator);
+		result.add("bridge" + File.separator + "rope" + File.separator);
+		result.add("stair" + File.separator + "wood" + File.separator);
+		result.add("stair" + File.separator + "rope" + File.separator);
+		result.add("support_pier" + File.separator);
 		return result;
 	}
 
-	public enum ClientFolderTypes
-	{
+	private static List<String> mcw_bridges_block_model_stone() {
+		List<String> result = new ArrayList<String>();
+		result.add("bridge" + File.separator + "bridge_stone" + File.separator);
+		result.add("stair" + File.separator + "stone" + File.separator);
+		result.add("support_pier" + File.separator);
+		result.add("bridge" + File.separator + "balustrade" + File.separator);//Added
+		return result;
+	}
+
+	private static List<String> mcw_roofs_block_modelwood() {
+		List<String> result = new ArrayList<String>();
+		result.add("attic" + File.separator);
+		result.add("lower" + File.separator);
+		result.add("middle_end" + File.separator);
+		result.add("roof" + File.separator);
+		result.add("steep" + File.separator);
+		result.add("top" + File.separator);
+		return result;
+	}
+
+	private static List<String> mcw_furnitures_block_model() {
+		List<String> result = new ArrayList<String>();
+		result.add("cabinet" + File.separator);
+		result.add("chair" + File.separator);
+		result.add("counter" + File.separator);
+		result.add("desk" + File.separator);
+		result.add("drawer" + File.separator);
+		result.add("table" + File.separator);
+		result.add("wardrobe" + File.separator);
+		return result;
+	}
+
+	private static List<String> mcw_trapdoors_block_model() {
+		List<String> result = new ArrayList<String>();
+		result.add("bamboo" + File.separator);
+		result.add("barn" + File.separator);
+		result.add("barred" + File.separator);
+		result.add("barrel" + File.separator);
+		result.add("beach" + File.separator);
+		result.add("blossom" + File.separator);
+		result.add("classic" + File.separator);
+		result.add("cottage" + File.separator);
+		result.add("four_panel" + File.separator);
+		result.add("glass" + File.separator);
+		result.add("mystic" + File.separator);
+		result.add("paper" + File.separator);
+		result.add("ranch" + File.separator);
+		result.add("rp_bark" + File.separator);
+		result.add("swamp" + File.separator);
+		result.add("tropical" + File.separator);
+		result.add("whispering" + File.separator);
+		return result;
+	}
+
+	private static List<String> mcw_paths_block_model() {
+		List<String> result = new ArrayList<String>();
+		result.add("wooden" + File.separator);
+		return result;
+	}
+
+	private static List<String> mcw_doors_block_model() {
+		List<String> result = new ArrayList<String>();
+		result.add("bamboo" + File.separator);
+		result.add("bark" + File.separator);
+		result.add("barn" + File.separator);
+		result.add("beach" + File.separator);
+		result.add("classic" + File.separator);
+		result.add("cottage" + File.separator);
+		result.add("four_panel" + File.separator);
+		result.add("glass" + File.separator);
+		result.add("japanese" + File.separator);
+		result.add("modern" + File.separator);
+		result.add("mystic" + File.separator);
+		result.add("nether" + File.separator);
+		result.add("paper" + File.separator);
+		result.add("stable" + File.separator);
+		result.add("stable_head" + File.separator);
+		result.add("swamp" + File.separator);
+		result.add("tropical" + File.separator);
+		result.add("waffle" + File.separator);
+		result.add("western" + File.separator);
+		result.add("whispering" + File.separator);
+		return result;
+	}
+
+	private static List<String> mcw_windows_block_model() {
+		List<String> result = new ArrayList<String>();
+		result.add("blinds" + File.separator);
+		result.add("curtain_rod" + File.separator);
+		result.add("parapet" + File.separator);
+		result.add("resizeable" + File.separator);
+		result.add("shutter" + File.separator);
+		result.add("window" + File.separator);
+		result.add("window_barred" + File.separator);
+		return result;
+	}
+
+	private static List<String> mcw_stairs_block_model() {
+		List<String> result = new ArrayList<String>();
+		result.add("balcony" + File.separator);
+		result.add("platform" + File.separator);
+		result.add("railing" + File.separator);
+		result.add("stairs" + File.separator);
+		return result;
+	}
+
+	public enum ClientFolderTypes {
 		MCW_BRIDGES_BLOCK_MODEL_WOOD(mcw_bridges_block_model_wood()),
 		MCW_BRIDGES_BLOCK_MODEL_STONE(mcw_bridges_block_model_stone()),
 		MCW_FENCES_BLOCK_MODEL_WOOD(mcw_fences_block_model_wood()),
@@ -212,17 +197,28 @@ public class McwAPI
 		DEFAULT(List.of());
 
 		private final List<String> path;
-		ClientFolderTypes(List<String> path)
-		{
+
+		ClientFolderTypes(List<String> path) {
 			this.path = path;
 		}
-		
-		public List<String> getPathList()
-		{
+
+		public List<String> getPathList() {
 			return path;
 		}
 	}
-	
+
+	public static List<ClientFolderTypes> getClientFolderTypesWood() {
+		return List.of(ClientFolderTypes.MCW_BRIDGES_BLOCK_MODEL_WOOD,
+				ClientFolderTypes.MCW_FENCES_BLOCK_MODEL_WOOD, ClientFolderTypes.MCW_ROOFS_BLOCK_MODEL_WOOD,
+				ClientFolderTypes.MCW_TRAPDOORS_BLOCK_MODEL_WOOD, ClientFolderTypes.MCW_DOORS_BLOCK_MODEL_WOOD,
+				ClientFolderTypes.MCW_WINDOWS_BLOCK_MODEL_WOOD, ClientFolderTypes.MCW_STAIRS_BLOCK_MODEL_WOOD,
+				ClientFolderTypes.MCW_PATHS_BLOCK_MODEL_WOOD, ClientFolderTypes.MCW_FURNITURES_BLOCK_MODEL);
+	}
+
+	public static List<ClientFolderTypes> getClientFolderTypesStone()
+	{
+		return List.of(ClientFolderTypes.MCW_BRIDGES_BLOCK_MODEL_STONE, ClientFolderTypes.MCW_FENCES_BLOCK_MODEL_STONE, ClientFolderTypes.MCW_ROOFS_BLOCK_MODEL_WOOD);
+	}
 	/*
 	 * A message for file generated
 	 */
@@ -456,7 +452,7 @@ public class McwAPI
 		
 	public static void verifJson(BufferedWriter buffer, String i, List<String> MAT_WOOD) throws IOException
 	{
-		if(!i.equals(MAT_WOOD.get(0)))
+		if(!i.equals(MAT_WOOD.getFirst()))
 		{
 			buffer.write(",");
 			buffer.newLine();
